# picaso

./: #create_master_opacity_db.py#  .all-contributorsrc  .buildinfo  .gitattributes  .gitignore  .travis.yml  1_Spectroscopy.html  2_BrownDwarfs.ipynb  2_Chemistry.html  HISTORY.rst  Manifest.toml  Project.toml  README.md  README.rst  atmsetup.py  code_of_conduct.md  conf.html  conf.ipynb  config.json  contribution.html  create_continuum_opacity.py  create_master_opacity_db.py  create_master_opacity_db_v2.py  credit.html  dmp.md  environment.yml  genindex.html  index.html  installation.html  modules.html  notebook_workflow.html  objects.inv  opacity.py  picaso.html  picaso.py  picaso_instruction.org  py-modindex.html  pyproject.toml  run_all_notebook_tests.sh  search.html  (+10 more)
.CondaPkg/: meta  pixi.toml
.github/: dependabot.yml
Benchmarking/: 12_RunningClimateCode Animation.ipynb  Benchmarking DEQ with Philips et al. (2020).ipynb  Benchmarking EQ code Brown Dwarf Animation.ipynb  Benchmarking EQ code Brown Dwarf.ipynb  K-distribution.ipynb  Make CIA DB in new wv grid.ipynb  Make Chemistry Plots.ipynb  Making DEQ animation.ipynb  Running Climate Code DEQ notebook for Planet.ipynb  Running Climate Code notebook for Planet.ipynb  chem_T700_lg5.5_NEQ_strong.txt  deq_planet  deq_planet_df  eq_planet  eq_planet_df  sol_flam.txt  t1000g1000f3_m0.0_co1.0.pt
_sources/: contribution.rst.txt  credit.rst.txt  index.rst.txt  installation.rst.txt  tutorials.rst.txt  workshops.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  contribution.rst  credit.rst  index.rst  installation.rst  make.bat  modules.rst  notebook_workflow.rst  picaso.rst  tutorials.rst  workshops.rst
notebooks/: 10_AnalyzingApproximations.html  10_AnalyzingApproximations.ipynb  10_CorrelatedKTables.html  10_CorrelatedKTables.ipynb  10_CreatingOpacityDb.html  10_CreatingOpacityDb.ipynb  10_QueryOpacities.html  10_QueryOpacities.ipynb  10_ResamplingOpacities.html  10_UsingCorrelatedKTables.html  10a_AnalyzingApproximationsReflectedLightToon.html  10a_AnalyzingApproximationsReflectedLightToon.ipynb  10b_AnalyzingApproximationsReflectedLightSH.html  10b_AnalyzingApproximationsReflectedLightSH.ipynb  10b_CorrelatedKTables.html  10c_AnalyzingApproximationsThermal.html  10c_AnalyzingApproximationsThermal.ipynb  11_ContributionFunctions.html  11_ContributionFunctions.ipynb  11_Sqlite3Tutorial.html  1_GetStarted.html  1_GetStarted.ipynb  2_AddingClouds.html  2_AddingClouds.ipynb  3_AddingSurfaceReflectivity.html  3_AddingSurfaceReflectivity.ipynb  3_Analyzing Approximations.ipynb  3_AnalyzingApproximations.html  4_AddingThermalFlux.html  4_AddingThermalFlux.ipynb  4_AnalyzingApproximations.html  5_AddingThermalFlux.html  5_AddingThermalFlux.ipynb  5_AddingTransitSpectrum.html  5_AddingTransitSpectrum.ipynb  5_BrownDwarfs.html  5_SwappingOpacities.html  5b_Sqlite3Tutorial.html  6_AddingSurfaceReflectivity.html  6_AddingThermalFlux.html  (+31 more)
picaso/: __init__.py  analyze.py  atmsetup.py  build_3d_input.py  calculate_atm.py  cia_interpolate.py  climate.py  clouds.py  data.py  debug_fluxes.py  deq_chem.py  disco.py  disort_disco.py  driver.py  driver.toml  driver_ui.py  elements.py  fluxes.py  fluxes_gpu.py  fluxes_noalloc.py  grad.py  identify.py  information_content.py  input_pickling.py  integration_testing.py  io_utils.py  justdoit.py  justplotit.py  liou_compare.py  model_compare.py  new_fluxes.py  numerics.py  opacity_factory.py  optics.py  parameterizations.py  phasecurves.py  photochem.py  picaso.py  picaso_data.py  rayleigh.py  (+12 more)
reference/: chem_full.pic  config.json  version.md
run/: bd_grid_fixed.sh  bd_grid_problempoint.sh  bd_grid_selfconsistent.sh  wrongside_fixed.sh  wrongside_selfconsistent.sh
scripts/: bd_grid_fixed.py  bd_grid_selfconsistent.py  (+23 more)
(+1184 files in other folders)
